<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/navNotes"
            android:icon="@drawable/notes_icon"
            android:title="@string/notes" />
        <item
            android:id="@+id/navAssignments"
            android:icon="@drawable/assignment_icon"
            android:title="@string/prev_questions" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/logout" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_rate"
                    android:title="@string/rate_app" />
            </group>
        </menu>

    </item>
</menu>